feat: implement track
