# doc/api.yaml
@@ -334,10 +334,10 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
-  /tracks:
+  /track:
     get:
       tags:
-        - Track
+        - Tracks
       summary: Get tracks list
       description: Gets all library tracks list
       responses:
@@ -353,7 +353,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
-        - Track
+        - Tracks
       summary: Add new track
       description: Add new track information
       requestBody:
@@ -388,7 +388,7 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /tracks/{id}:
+  /track/{id}:
     parameters:
       - name: id
         in: path
@@ -398,7 +398,7 @@ paths:
           format: uuid
     get:
       tags:
-        - Track
+        - Tracks
       summary: Get single track by id
       description: Gets single track by id
       responses:
@@ -413,10 +413,10 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
-          description: Track was not found.
+          description: Tracks was not found.
     put:
       tags:
-        - Track
+        - Tracks
       summary: Update track information
       description: Update library track information by UUID
       requestBody:
@@ -477,10 +477,10 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
-          description: Track was not found.
+          description: Tracks was not found.
     delete:
       tags:
-        - Track
+        - Tracks
       summary: Delete track
       description: Delete track from library
       responses:
@@ -491,7 +491,7 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
-          description: Track was not found.
+          description: Tracks was not found.
   /albums:
     get:
       tags:
@@ -776,7 +776,7 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
         422:
-          description: Track with id doesn't exist.
+          description: Tracks with id doesn't exist.
     delete:
       tags:
         - Favorites
@@ -790,7 +790,7 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
-          description: Track was not found.
+          description: Tracks was not found.
   /favs/album/{id}:
     parameters:
       - name: id
